--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="firstword_card">Conectado hace</string>
     <string name="timeword_card">2</string>
     <string name="likeNumber_card">5 Me gusta</string>
+    <string name="tab_search">5 Me gusta</string>
+    <string name="tab_home">5 Me gusta</string>
+    <string name="tab_profile">5 Me gusta</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
